policies/seccomp-profile-pod-restricted.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: check-seccomp-profile-pod-restricted
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods"]
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods/ephemeralcontainers"]
  variables:
    - name: allowedSeccompTypes
      expression: >
        ["RuntimeDefault","Localhost"]
    - name: podTypePresent
      expression: >
        has(object.spec.securityContext) &&
        has(object.spec.securityContext.seccompProfile) &&
        has(object.spec.securityContext.seccompProfile.type)
    - name: podTypeAllowed
      expression: >
        variables.podTypePresent &&
        variables.allowedSeccompTypes.exists(t, t == object.spec.securityContext.seccompProfile.type)
    - name: containersAllSetAndAllowed
      expression: >
        object.spec.containers.all(c,
          has(c.securityContext) &&
          has(c.securityContext.seccompProfile) &&
          has(c.securityContext.seccompProfile.type) &&
          variables.allowedSeccompTypes.exists(t, t == c.securityContext.seccompProfile.type)
        )
    - name: initAllSetAndAllowed
      expression: >
        !has(object.spec.initContainers) ||
        object.spec.initContainers.all(ic,
          has(ic.securityContext) &&
          has(ic.securityContext.seccompProfile) &&
          has(ic.securityContext.seccompProfile.type) &&
          variables.allowedSeccompTypes.exists(t, t == ic.securityContext.seccompProfile.type)
        )
    - name: ephAllSetAndAllowed
      expression: >
        !has(object.spec.ephemeralContainers) ||
        object.spec.ephemeralContainers.all(ec,
          has(ec.securityContext) &&
          has(ec.securityContext.seccompProfile) &&
          has(ec.securityContext.seccompProfile.type) &&
          variables.allowedSeccompTypes.exists(t, t == ec.securityContext.seccompProfile.type)
        )
  validations:
    - expression: >
        (has(object.spec.os) &&
         has(object.spec.os.name) &&
         object.spec.os.name.lowerAscii() == "windows") ||
        variables.podTypeAllowed ||
        (!variables.podTypePresent && variables.containersAllSetAndAllowed && variables.initAllSetAndAllowed && variables.ephAllSetAndAllowed)
      message: >
        spec.securityContext.seccompProfile.type must be "RuntimeDefault" or "Localhost".
        It may be undefined only if every container (including init and ephemeral) sets its own
        securityContext.seccompProfile.type to "RuntimeDefault" or "Localhost".
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optout-warn
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-pod-restricted
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optin-warn
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-pod-restricted.validating-admission-policies.kolteq.com/warn
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optout-audit
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-pod-restricted
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optin-audit
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-pod-restricted.validating-admission-policies.kolteq.com/audit
          operator: In
          values: ["true"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optout-deny
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["restricted"]
        - key: validating-admission-policies.kolteq.com/seccomp-profile-pod-restricted
          operator: NotIn
          values: ["false"]
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-pod-restricted-namespace-optin-deny
spec:
  policyName: check-seccomp-profile-pod-restricted
  validationActions:
    - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
        - key: seccomp-profile-pod-restricted.validating-admission-policies.kolteq.com/enforce
          operator: In
          values: ["true"]
